2003-06-05  Darin Adler  <darin@apple.com>

        Reviewed by John.

	- fixed 3278079 -- REGRESSION: UTF-8 page claiming to be UTF-16 in XML header gives garbage characters

        * khtml/misc/decoder.cpp: (Decoder::setEncoding): Add EncodingFromXMLHeader as one of the
        types where we know the encoding is an 8-bit one. The reason this is a regression is that we
        used to ignore the encoding in the XML header altogether.

2003-06-04  John Sullivan  <sullivan@apple.com>

	- fixed 3279957 -- REGRESSION: assertion failure at launch in 
	Decoder::~Decoder() importing bookmarks

	Richard actually wrote this fix.
        Reviewed by me, Darin

        * kwq/WebCoreEncodings.mm:
        (+[WebCoreEncodings decodeData:]):
	don't use stack-based decoder; use new instead. 

2003-06-04  David Hyatt  <hyatt@apple.com>

	Fix for 3273300, leaks in cssyyparse.  Function forgot to delete
	its args value list when destroyed.
	
        Reviewed by gramps

        * khtml/css/cssparser.h:

2003-06-03  David Hyatt  <hyatt@apple.com>

	Fix for 3259647, crash when printing a table page.  This is fixed
	on the KDE KHTML trunk.  The loop shouldn't be broken out of
	when you have column elements so that all sections can recalc
	their cell grids as needed.
	
        Reviewed by kocienda

        * khtml/rendering/render_table.cpp:
        (RenderTable::recalcSections):

=== Safari-82 ===

2003-06-03  Richard Williamson   <rjw@apple.com>

	Fixed 3275565.  Ref count the decoder.

        Reviewed by Ken.

        * khtml/khtml_part.cpp:
        (KHTMLPart::clear):
        * khtml/misc/decoder.cpp:
        (Decoder::Decoder):
        (Decoder::~Decoder):
        * khtml/misc/decoder.h:
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::~DocumentImpl):
        * khtml/xml/dom_docimpl.h:
	

2003-06-02  David Hyatt  <hyatt@apple.com>

	Fix for 3276099.  value() was wrong for radio buttons.  Needed
	to get it from the attribute since I was no longer caching